--- a/css/index.css
+++ b/css/index.css
@@ -146,9 +146,8 @@ word-wrap: break-word;
 }
 
 p{
-	margin-right: 50px;
-	text-align: justify;
-	font-size:  100%;
+	margin-bottom: 12px;
+	margin-right: 20px;
 }
 
 .paperheading{
@@ -170,7 +169,9 @@ p{
 	font-size: 100%;	
 	display: block;	
 	margin-bottom: 1px;
+	color: #008844;
 }
+
 .ph{
 	text-align: left;
 	font-size:  100%;
